fixing the routes a bit so they navigate correctly. I want the navbar to always be visible which im trying to sort out

--- a/src/components/NAVBAR/logo.module.scss
+++ b/src/components/NAVBAR/logo.module.scss
@@ -1,8 +1,14 @@
 .container {
   height: 100%;
-  width: 300px;
+  min-width: 100%;
+  justify-self: center;
+
+  grid-column: 2;
 }
 
 .wrapper {
-  background-color: black;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
