--- a/src/components/NAVBAR/navBar.module.scss
+++ b/src/components/NAVBAR/navBar.module.scss
@@ -2,4 +2,17 @@
   height: 80px;
   width: 100%;
   background-color: #fdf7e3;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.wrapper {
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+
+  grid-template-columns: repeat(3, calc(100% / 3));
 }
