--- a/src/components/NAVBAR/navBarButtons.module.scss
+++ b/src/components/NAVBAR/navBarButtons.module.scss
@@ -3,13 +3,13 @@
   justify-content: space-around;
   align-items: center;
 
-  justify-self: flex-end;
-
-  height: 100%;
-  min-width: 320px;
+  min-height: 100%;
+  width: 70%;
+  min-width: 350px;
   width: fit-content;
 
-  margin-right: 30px;
+  justify-self: flex-end;
+  grid-column: 3;
 }
 
 .wrapper {
@@ -17,7 +17,7 @@
   width: fit-content;
 
   min-width: 100px;
-  height: 30px;
+  min-height: 30px;
 
   display: flex;
   justify-content: center;
